--- a/vignettes/bikedata.Rmd
+++ b/vignettes/bikedata.Rmd
@@ -32,6 +32,7 @@ London, U.K. | [Santander Cycles](https://tfl.gov.uk/modes/cycling/santander-cyc
 New York City NY, U.S.A. | [citibike](https://www.citibikenyc.com/) | 7,000 | 458
 Chicago IL, U.S.A. | [Divvy](https://www.divvybikes.com/) | 5,837 | 576
 Washingon DC, U.S.A. | [Capital BikeShare](https://www.capitalbikeshare.com/) | 4,457 | 406
+Minneapolis/St Paul MN, U.S.A. | [Nice Ride](https://www.niceridemn.org/) | 1,833 | 171
 Boston MA, U.S.A. | [Hubway](https://www.thehubway.com/) | 1,461 | 158
 Los Angeles CA, U.S.A. | [Metro](https://bikeshare.metro.net/) | 1,000 | 65
 Philadelphia PA, U.S.A. | [Indego](https://www.rideindego.com) | 600 | 60
