:heavy_plus_sign:read_:one:_line_generic

--- a/data-raw/sysdata.Rmd
+++ b/data-raw/sysdata.Rmd
@@ -25,7 +25,26 @@ specifying the correponding structure here, recreating the `bike_headers.rda`
 file, and modifying the **R** code as detailed in the [`bikedata`
 wiki](https://github.com/ropensci/bikedata/wiki/How-to-add-a-new-city).
 
-This first bit of code specifies the structures for the cities:
+This first bit of code specifies the structures for the cities, with the C++
+code then just referencing the following numbers for each field:
+| number | field                   |
+| ----   | ----------------------- |
+| 0      | duration                |
+| 1      | start_time              |
+| 2      | end_time                |
+| 3      | start_station_id        |
+| 4      | start_station_name      |
+| 5      | start_station_latitude  |
+| 6      | start_station_longitude |
+| 7      | end_station_id          |
+| 8      | end_station_name        |
+| 9      | end_station_latitude    |
+| 10     | end_station_longitude   |
+| 11     | bike_id                 |
+| 12     | user_type               |
+| 13     | birth_year              |
+| 14     | gender                  |
+
 ```{r}
 fields <- c ("duration", "start_time", "end_time",
              "start_station_id", "start_station_name",
