--- a/README.Rmd
+++ b/README.Rmd
@@ -2,11 +2,11 @@
 title: "bikedata"
 keywords: "bicycle hire systems, bike hire systems, bike hire, bicycle hire, database, bike data"
 output:
-    github_document:
-        toc: false
-    html_document:
-        toc: true
-        theme: flatly
+  rmarkdown::html_vignette:
+    self_contained: no
+
+  md_document:
+    variant: markdown_github
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
@@ -192,3 +192,16 @@ sum (bike_tripmat ('bikedb', gender = 'female'))
 sum (bike_tripmat ('bikedb', weekday = 'sat', birth_year = 1980:1990,
                    gender = 'unspecified'))
 ```
+
+### 3. Citation
+
+```{r}
+citation ("bikedata")
+```
+
+### 4. Code of Conduct
+
+Please note that this project is released with a [Contributor Code of Conduct](CONDUCT.md). 
+By participating in this project you agree to abide by its terms.
+
+[![ropensci\_footer](http://ropensci.org/public_images/github_footer.png)](http://ropensci.org)
